# vmfuture

./: Cargo.toml
doc/: bec.sty  charter.sty  main-vmf.tex  mathpartir.sty  mk  objlang.ott  sec-vmf.mng.tex  sec-vmf.tex  vmf-def.ott
src/: dynamics.rs  macros.rs  main.rs  syntax.rs  typing.rs
